# G-Market-Azeroth

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: funpay_parser.md
scripts/: parse_funpay_prices.py  sync_funpay_products.py
src/g_market_azeroth/: __main__.py  admin.py  backup.py  bot.py  catalog.py  config.py  constants.py  database.py  desktop_api.py  error_handlers.py  handlers.py  healthcheck.py  logging.py
src/g_market_azeroth/middlewares/: rate_limit.py
src/g_market_azeroth/parsers/: __init__.py
src/g_market_azeroth/parsers/funpay/: __init__.py  client.py  export.py  mapping_export.py  models.py  normalization_export.py  parser.py  repository.py
src/g_market_azeroth/repositories/: __init__.py  catalog_sync_audit.py  clients.py  products.py  requests.py  support.py
src/g_market_azeroth/services/: products.py  statuses.py
src/g_market_azeroth/services/parsers/: __init__.py  apply.py  base.py  funpay.py  preview.py  runner.py
tests/: test_admin_products.py  test_catalog_sync_audit.py  test_config.py  test_error_handlers.py  test_handlers.py  test_parser_services.py  test_products_repository.py
