[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "g-market-azeroth"
version = "0.1.0"
description = "Telegram bot skeleton for G-Market Azeroth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.21.0",
    "python-dotenv==1.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
